src/test/deca/context/invalid/improvided/new.deca
// Description:
//   Instanciation avec un type invalide
//
// Résultats:
//   Erreur Contextuelle
//   Ligne 9: The given type for Cast isn't compatible.

{
   float z = new float();
}
